--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ otp_release:
   - R15B03
   - R15B02
 
-script: "./elvis rock && ./rebar3 do dialyzer, eunit"
+script: "./rebar3 do dialyzer, eunit"
