--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,6 +11,8 @@ jobs:
   ci:
     name: Run checks and tests over ${{matrix.otp_vsn}} and ${{matrix.os}}
     runs-on: ${{matrix.os}}
+    container:
+      image: erlang:${{matrix.otp_vsn}}
     strategy:
       matrix:
         otp_vsn: [17.1, 17.3, 18.0, 18.1, 19.0, 19.3, 20.0, 20.3, 21.0.2, 22.3, 23.1]
