--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,7 +15,7 @@ jobs:
       image: erlang:${{matrix.otp_vsn}}
     strategy:
       matrix:
-        otp_vsn: [17.1, 17.3, 18.0, 18.1, 19.0, 19.3, 20.0, 20.3, 21.0.2, 22.3, 23.1]
+        otp_vsn: [18.1, 19.0, 19.3, 20.0, 20.3, 21.0.2, 22.3, 23.1]
         os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v2
